syntax = "proto3";

package eventura;

option go_package = "./eventura";

message AppendEventRequest {
  string stream_id = 1;
  string event_type = 2;
  bytes payload = 3;
}

message AppendEventResponse {
  string event_id = 1;
}

message ReadStreamRequest {
  string stream_id = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message ReadStreamResponse {
  repeated Event events = 1;
}

message Event {
  string id = 1;
  string stream_id = 2;
  string type = 3;
  bytes payload = 4;
  int64 timestamp = 5;
}

service EventStoreService {
  rpc AppendEvent(AppendEventRequest) returns (AppendEventResponse) {}
  rpc ReadStream(ReadStreamRequest) returns (ReadStreamResponse) {}
}
